--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang = "en">
 <head>
      <meta charset = "UTF-8">
-     <title>Lista de Cursos de DevOps de Alura </title>
+     <title>Cursos de Alura </title>
 </head>
 <body>
      <ul>
          <li> Vagrant </li>
-         <li> Docker </li>
+         <li> Docker: Creando containers sin dolor de cabeza </li>
          <li> Ansible </li>
          <li> Integración ContinuaM Madurez y Productividad en el desarrollo de Software </li>
      </ul>
